Alpha 0.1.8.31
- The auto-updater is now initialized before checking if the current server version is valid. Thanks, @Eldoria, for the bug report!
- Removed the shadowtoggle command.
- Added some util methods to opener classes to make them a bit more useful for external plugins.
- Removed some unused stuff.
- Updated database to v8.
- Added protection hook for GriefDefender. Thanks, anon_fawkes, for the suggestion!

Alpha 0.1.8.30
- Add full support for Minecraft 1.17.
- Close all open BigDoors menus on plugin shutdown/restart.
- Fix restarting the plugin causing the GUI to break if different localization is loaded. Thanks, @themarwik, for the bug report!
- Updated XMaterial.
- Fixed jungle logs not rotating properly in east/south-aligned drawbridges. Thanks, @Nateboy, for the bug report and for helping fix it!
- Fix PlotSquared v4.4.495 support. All older versions of v4 aren't supported anymore. Thanks, @Arma, for the bug report!
- Fix support for version 1.13.2 (previously 1.13 and 1.13.1 were the only working 1.13.x versions) 

Alpha 0.1.8.29
- Improved checking if the open GUI is ours. Thanks, @GodsDead, for the bug report!
- Fixed admin bypass permissions not being taken into account when using commands. Thanks, @yriokiri and @Endaar, for the bug reports!
- When moving a powerblock, selecting the current powerblock's location will no longer tell you that the location is already occupied. Instead, it'll just tell you everything went well.
- Executing "/listdoors" in the console without any player/doorName argument will now list all doors instead of complain about being unable to find any doors. 
- Added new notification system for door creators. Thanks, @IronAR, for the suggestion! This allows door creators to opt-in on a per-door basis to receive notifications whenever a door is toggled.
- Added config option "allowNotifications" (default: true) to enable/disable the notification system. 