@@ -1,10 +1,11 @@
 Alpha 0.1.8.31
-- The auto-updater is now initialized before checking if the current server version is valid. Thanks, @Eldoria, for the bug report!
+- The auto-updater is now initialized before checking if the current server version is valid. Thanks, Eldoria, for the bug report!
 - Removed the shadowtoggle command.
 - Added some util methods to opener classes to make them a bit more useful for external plugins.
 - Removed some unused stuff.
 - Updated database to v8.
 - Added protection hook for GriefDefender. Thanks, anon_fawkes, for the suggestion!
+- Added alias for "/BDM": "/doors". This opens the doors GUI. This is much easier to remember for new users. Thanks, GodsDead, for the suggestion!
 
 Alpha 0.1.8.30
 - Add full support for Minecraft 1.17.
